fix error with horizontal scroll

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -7,6 +7,7 @@
   .row {
     text-align: center;
     padding: 10px 0;
+    margin: 0;
   }
 
   .row + .row {
